added some styles

--- a/papers/templates/layouts/base.html
+++ b/papers/templates/layouts/base.html
@@ -26,7 +26,7 @@
 </head>
 <body class="bg-gray-100">
     {% include 'components/marquee.html' %}
-    <div id class="container mx-auto p-6">
+    <div id="main-content" class="container mx-auto p-6">
         {% block content %}{% endblock %}
     </div>
 
