--- a/papers/templates/components/navbar.html
+++ b/papers/templates/components/navbar.html
@@ -5,6 +5,13 @@
       <li><a href="{% url 'home' %}" class="hover:underline">Home</a></li>
       <li><a href="{% url 'paper_list' %}" class="hover:underline">Papers</a></li>
       <li><a href="{% url 'paper_upload' %}" class="hover:underline">Upload</a></li>
+      {% if user.is_authenticated %}
+        <li class="text-gray-300">Hi, {{ user.username }}</li>
+        <li><a href="{% url 'account_logout' %}" class="hover:underline">Logout</a></li>
+      {% else %}
+        <li><a href="{% url 'account_login' %}" class="hover:underline">Login</a></li>
+        <li><a href="{% url 'account_signup' %}" class="hover:underline">Register</a></li>
+      {% endif %}
       <!-- Add more links as needed -->
     </ul>
   </div>
