--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -1,5 +1,10 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-<h1>Welcome to the Academic Repository {{ name }}</h1>
+
+
+<form action="{% url 'paper_list' %}" method="get" class="mb-4 flex-col justify-center items-center" >
+    <input type="search" class="w-full p-2 border border-gray-300 rounded-md mb-4" placeholder="Search papers" name="q" value="{{ request.GET.q }}">
+    <button type="submit" class="px-4 py-2 bg-red-300 text-white rounded hover:bg-blue-700 items-center justify-center">Search</button>
+</form>
 {% endblock %}
