--- a/papers/templates/components/marquee.html
+++ b/papers/templates/components/marquee.html
@@ -10,7 +10,7 @@
       position: relative;
       overflow: hidden;
       background-color: white;
-      padding: 2rem 0;
+      padding: 1rem 0;
     }
 
     /* Marquee track wrapper */
@@ -54,7 +54,7 @@
     .marquee-list {
       display: flex;
       gap: 4rem;
-      font-size: 2rem;
+      font-size: 20px;
       font-weight: bold;
       color: #333;
     }
