--- a/papers/templates/components/navbar-no-search.html
+++ b/papers/templates/components/navbar-no-search.html
@@ -1,21 +1,7 @@
 <nav class="bg-white p-4 text-black">
-  <div class="container mx-auto flex flex-col sm:flex-row sm:justify-between sm:items-center gap-4">
+  <div class="container mx-auto flex flex-col sm:flex-row sm:justify-between sm:items-center gap-4 py-2">
     <!-- Logo -->
     <a href="/" class="font-bold text-xl">Academic Repo</a>
-
-    <!-- Search -->
-    <form action="{% url 'paper_list' %}" method="get" class="flex flex-1 flex-col sm:flex-row items-center gap-2">
-      <input
-        type="search"
-        name="q"
-        placeholder="Search papers, authors, or topics..."
-        value="{{ request.GET.q }}"
-        class="flex-1 p-2 rounded-md border-[1px] border-b  lack focus:ring-2 focus:ring-black focus:outline-none transition"
-      >
-      <button type="submit" class="px-4 py-2 text-black bg-white border-black border-[1px] rounded-md font-semibold hover:bg-black hover:text-white hover:border-white transition">
-        Search
-      </button>
-    </form>
 
 
     <!-- Nav Links -->
