--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/home.html' %}
 
 {% block content %}
 <div class="flex flex-col items-center justify-center min-h-[60vh]">
