--- a/papers/templates/layouts/home.html
+++ b/papers/templates/layouts/home.html
@@ -14,22 +14,23 @@
     defer
     src="https://cdn.jsdelivr.net/npm/@alpinejs/focus@3.x.x/dist/cdn.min.js"
     ></script>
-    <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
-    <style>
-        /* Optional: customize color and thickness */
-        #nprogress .bar {
-            background: #000000; /* Tailwind's blue-600 */
-            height: 3px;
-        }
-    </style>
+  
   <!-- Alpine Core -->
     <script
     defer
     src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
+    <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
+    <style>
+        /* Optional: customize color and thickness */
+        #nprogress .bar {
+            background: #2563eb; /* Tailwind's blue-600 */
+            height: 3px;
+        }
+    </style>
 
     {% block extra_head %}{% endblock %}
-    {% include 'components/navbar.html' %}
+    {% include 'components/navbar-no-search.html' %}
 </head>
 <body class="bg-gray-100">
     {% include 'components/marquee.html' %}
@@ -61,6 +62,5 @@
         });
     });
     </script>
-
 </body>
 </html>
