--- a/papers/templates/layouts/home.html
+++ b/papers/templates/layouts/home.html
@@ -24,7 +24,7 @@
     <style>
         /* Optional: customize color and thickness */
         #nprogress .bar {
-            background: #2563eb; /* Tailwind's blue-600 */
+            background: #000000; /* Tailwind's blue-600 */
             height: 3px;
         }
     </style>
