--- a/papers/templates/papers/paper_list.html
+++ b/papers/templates/papers/paper_list.html
@@ -23,17 +23,22 @@
           <span class="text-xl text-gray-400 font-semibold">[Paper not found]</span>
         {% endif %}
 
-      <!-- Author and Upload Date -->
-        {% with paper=item.paper %}
-          {% if paper.authors.exists %}
-            <div>
-              {% for author in paper.authors.all %}
-                {{ author.full_name }}{% if not forloop.last %}, {% endif %}
-              {% endfor %}
-              - {{ paper.year }}
-            </div>
-          {% endif %}
-        {% endwith %}
+
+<!-- Author -->
+{% with paper=item.paper %}
+  {% if paper.authors %}
+    <div>
+      {% for author in paper.authors %}
+        <span class="p-1 bg-grey-300 text-green-900">{{ author }}</span>{% if not forloop.last %} {% endif %}
+      {% endfor %}
+      - 
+      <span class="ml-2 uppercase text-sm text-gray-600">
+        {{ paper.college }} {{ paper.program }}
+      </span>
+      - <span class="text-grey-500">{{ paper.year }}</span>
+    </div>
+  {% endif %}
+{% endwith %}
       
         <!-- Snippet -->
         <div x-data="{ expanded: false }" class="mt-2 text-gray-600 text-sm leading-relaxed">
@@ -54,12 +59,25 @@
             {% endif %}
         </div>
 
-        {% if item.paper.summary %}
-          <div class="mt-2 p-3 bg-yellow-50 border-l-4 border-yellow-400 rounded">
+      {% if item.paper.summary %}
+        <div x-data="{ open: false }" class="mt-2">
+          <button
+            @click="open = !open"
+            class="text-yellow-800 font-semibold hover:underline focus:outline-none"
+          >
+            <span x-text="open ? 'Hide Summary' : 'Show Summary'"></span>
+          </button>
+
+          <div
+            x-show="open"
+            x-transition
+            class="mt-2 p-3 bg-yellow-50 border-l-4 border-yellow-400 rounded text-gray-800"
+          >
             <span class="font-semibold text-yellow-800">Summary:</span>
-            <span class="text-gray-800">{{ item.paper.summary }}</span>
+            <span>{{ item.paper.summary }}</span>
           </div>
-        {% endif %}
+        </div>
+      {% endif %}
 
 
         <!-- Tags -->
