added staff page

--- a/papers/templates/components/navbar-no-search.html
+++ b/papers/templates/components/navbar-no-search.html
@@ -6,6 +6,7 @@
 
     <!-- Nav Links -->
     <ul class="flex flex-wrap justify-center sm:justify-end items-center gap-4 text-sm">
+      <li><a href="{% url 'saved_papers' %}" class="hover:underline">Library</a></li>
       <li><a href="{% url 'home' %}" class="hover:underline">Home</a></li>
       <li><a href="{% url 'paper_list' %}" class="hover:underline">Papers</a></li>
       <li><a href="{% url 'paper_upload' %}" class="hover:underline">Upload</a></li>
