--- a/papers/templates/layouts/home.html
+++ b/papers/templates/layouts/home.html
@@ -5,6 +5,7 @@
     <title>{% block title %}Academic Repo{% endblock %}</title>
 
     <!-- Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
     <!-- HTMX -->
@@ -63,4 +64,8 @@
     });
     </script>
 </body>
+
+<footer>
+    {% include 'components/footer.html' %}
+</footer>
 </html>
